--- a/docker-zabbix/docker-compose.yml
+++ b/docker-zabbix/docker-compose.yml
@@ -13,35 +13,34 @@ services:
           - "node.platform.arch==x86_64"
     env_file:
       - start.env       
-    expose:
-      - '5433'
-    restart: always
+    ports:
+      - target: 5432
+        published: 5432
+        mode: ingress
     volumes:
       - zabbix-db:/var/lib/postgresql/data
     networks:
       - zabbix-net
- 
 
   zabbix-server:
-    image: zabbix/zabbix-server-pgsql:alpine-latest
+    image: zabbix/zabbix-server-pgsql:5.4-alpine-latest
     environment:
       DB_SERVER_HOST: postgres-zabbix
       DB_SERVER_PORT: 5432
+    deploy:
+      restart_policy:
+        condition: on-failure
     env_file:
       - start.env      
     ports:
-       - '10051:10051'
-    restart: always
-    links: 
-      - postgres-zabbix
-    depends_on:
-      - postgres-zabbix
+      - '10051:10051'
     networks:
       - zabbix-net  
+    depends_on:
+      - postgres-zabbix
 
   zabbix-web:
-    image: zabbix/zabbix-web-nginx-pgsql:alpine-latest
-    container_name: zabbix-web
+    image: zabbix/zabbix-web-nginx-pgsql:5.4-alpine-latest
     environment:
       DB_SERVER_HOST: postgres-zabbix
       DB_SERVER_PORT: 5432 
@@ -49,12 +48,20 @@ services:
       PHP_TZ: Europe/Kiev
     env_file:
       - start.env  
+    deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.role == manager
+      restart_policy:
+        condition: on-failure
     ports:
-      - '18080:8080'
-      - '18443:8443'
-    restart: always
-    links: 
-      - zabbix-server
+      - target: 8443
+        published: 18443
+        mode: host
+      - target: 8080
+        published: 18080
+        mode: host
     depends_on:
       - zabbix-server
     networks:
@@ -62,12 +69,15 @@ services:
       
 networks:
   zabbix-net:
+    driver: overlay       
+    driver_opts:
+      com.docker.network.enable_ipv6: "false"
   
 volumes:
   zabbix-db:
     driver: local
     driver_opts:
       type: "nfs"
-      o: "addr=192.168.2.56,rsize=65536,wsize=65536,timeo=300,tcp,rw,noatime"
-      device: ":/mnt/big_pool/misc/zabbix_db"  
+      o: "addr=192.168.2.56,vers=3,rsize=65536,wsize=65536,timeo=300,tcp,rw,noatime"
+      device: ":/mnt/vm_pool/misc/zabbix_db"  
   
