--- a/docker-zabbix/start.env.sample
+++ b/docker-zabbix/start.env.sample
@@ -1,3 +1,7 @@
-POSTGRES_USER=zabbix
-POSTGRES_PASSWORD=zabbix
 POSTGRES_DB=zabbix
+POSTGRES_USER_FILE=/run/secrets/POSTGRES_USER
+POSTGRES_PASSWORD_FILE=/run/secrets/POSTGRES_PASSWORD
+DB_SERVER_HOST=postgres-zabbix
+DB_SERVER_PORT=5432
+ZBX_SERVER_HOST=zabbix-server
+PHP_TZ=Europe/London 
