--- a/docker-zabbix/docker-compose.yml
+++ b/docker-zabbix/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
    
   postgres-zabbix:
-    image: postgres:12-alpine
+    image: postgres:14-alpine
     #    configs:
     #  - source: postgres_config
     #    target: /etc/postgresql/postgresql.conf
-    #command: postgres -c config_file=/etc/postgresql/postgresql.conf    
+    #command: postgres -c config_file=/etc/postgresql/postgresql.conf
     deploy:
       replicas: 1
       restart_policy:
@@ -21,33 +21,33 @@ services:
           memory: 2G
         reservations:
           cpus: '0.5'
-          memory: 1G      
+          memory: 1G
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$(cat `echo $$POSTGRES_USER_FILE`)" ]
       interval: 30s
       timeout: 60s
       retries: 5
-      start_period: 80s      
+      start_period: 80s
     env_file:
-      - start.env       
+      - start.env
     environment:
        POSTGRES_USER_FILE: /run/secrets/POSTGRES_USER
        POSTGRES_PASSWORD_FILE: /run/secrets/POSTGRES_PASSWORD
     secrets:
       - POSTGRES_USER
-      - POSTGRES_PASSWORD   
+      - POSTGRES_PASSWORD
     ports:
       - target: 5432
         published: 5432
         mode: ingress
     stop_grace_period: 1m
     volumes:
-      - zabbix-db:/var/lib/postgresql/data
+      - zabbix-db-new:/var/lib/postgresql/data
     networks:
       - zabbix-net
 
   zabbix-server:
-    image: zabbix/zabbix-server-pgsql:5.4-alpine-latest
+    image: zabbix/zabbix-server-pgsql:alpine-6.4-latest
     deploy:
       restart_policy:
         condition: on-failure
@@ -90,7 +90,7 @@ services:
       com.zabbix.os: "alpine"    
 
   zabbix-web:
-    image: zabbix/zabbix-web-nginx-pgsql:5.4-alpine-latest
+    image: zabbix/zabbix-web-nginx-pgsql:6.4-alpine-latest
     environment:
       DB_SERVER_HOST: postgres-zabbix
       DB_SERVER_PORT: 5432 
@@ -146,12 +146,12 @@ networks:
       com.docker.network.enable_ipv6: "false"
   
 volumes:
-  zabbix-db:
+  zabbix-db-new:
     driver: local
     driver_opts:
       type: "nfs"
       o: "addr=nas,vers=3,rsize=65536,wsize=65536,timeo=300,tcp,rw,noatime"
-      device: ":/mnt/trash_pool/misc/zabbix_db"  
+      device: ":/mnt/trash_pool/misc/zabbix_db_new"  
  
 secrets:      
   POSTGRES_USER:
