--- a/docker-homer/docker-compose.yml
+++ b/docker-homer/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: b4bz/homer
     container_name: homer
     volumes:
-      - /your/local/assets/:/www/assets
+      - homer:/www/assets
     ports:
       - 8012:8080
     user: 1000:1000 # default
