--- a/docker-transmission-openvpn/docker-compose.yml
+++ b/docker-transmission-openvpn/docker-compose.yml
@@ -31,7 +31,9 @@ services:
     interval: 120s
     timeout: 30s
     retries: 5     
-  restart: always
+  sysctls:
+    - "net.ipv6.conf.all.disable_ipv6=0"
+  restart: unless-stopped
 
 networks:
   default:      
