--- a/docker-zabbix/Jenkinsfile
+++ b/docker-zabbix/Jenkinsfile
@@ -51,6 +51,8 @@ pipeline {
                     
                     dir("${env.DOCKER_COMPOSE_DIR}") {
                         sh "docker service rm ${env.DOCKER_STACK_NAME}_postgres-zabbix"
+                        sh "docker service rm ${env.DOCKER_STACK_NAME}_zabbix-server"
+                        sh "docker service rm ${env.DOCKER_STACK_NAME}_zabbix-web"
                         sh "docker secret rm ${env.DOCKER_STACK_NAME}_POSTGRES_PASSWORD"
                         sh "docker secret rm ${env.DOCKER_STACK_NAME}_POSTGRES_USER"
                         sh "docker -H tcp://${DOCKER_SWARM_MANAGER_IP}:${DOCKER_SWARM_MANAGER_PORT} stack deploy -c docker-compose.yml ${env.DOCKER_STACK_NAME}" 
