--- a/docker-zabbix/Jenkinsfile
+++ b/docker-zabbix/Jenkinsfile
@@ -50,11 +50,6 @@ pipeline {
                 script {
                     
                     dir("${env.DOCKER_COMPOSE_DIR}") {
-                        // sh "docker service rm ${env.DOCKER_STACK_NAME}_postgres-zabbix"
-                        // sh "docker service rm ${env.DOCKER_STACK_NAME}_zabbix-server"
-                        // sh "docker service rm ${env.DOCKER_STACK_NAME}_zabbix-web"
-                        // sh "docker secret rm ${env.DOCKER_STACK_NAME}_POSTGRES_PASSWORD"
-                        // sh "docker secret rm ${env.DOCKER_STACK_NAME}_POSTGRES_USER"
                         sh "CONF_VERSION=${BUILD_NUMBER} docker -H tcp://${DOCKER_SWARM_MANAGER_IP}:${DOCKER_SWARM_MANAGER_PORT} stack deploy -c docker-compose.yml ${env.DOCKER_STACK_NAME}" 
                     }
                 }
@@ -66,7 +61,10 @@ pipeline {
         always { 
             cleanWs()
         }
-      //  success {}
+        success {
+            // Cleanup orphaned secrets
+            sh "docker secret rm $(docker secret ls -q) || true"
+        }
       //  failure {}
       //  unstable{}
     }
