--- a/docker-zabbix/postgresql.conf
+++ b/docker-zabbix/postgresql.conf
@@ -1,24 +1,21 @@
-# DB Version: 12
+# DB Version: 14
 # OS Type: linux
-# DB Type: dw
-# Total Memory (RAM): 512 MB
-# CPUs num: 2
+# DB Type: mixed
+# Total Memory (RAM): 1500 MB
+# CPUs num: 3
 # Data Storage: san
 
-listen_addresses = '*'
-max_connections = 40
-shared_buffers = 128MB
-effective_cache_size = 384MB
-maintenance_work_mem = 64MB
 checkpoint_completion_target = 0.9
-wal_buffers = 3932kB
-default_statistics_target = 500
-random_page_cost = 1.1
+default_statistics_target = 150
+effective_cache_size = 1125MB
 effective_io_concurrency = 300
-work_mem = 1638kB
-min_wal_size = 4GB
-max_wal_size = 16GB
-max_worker_processes = 2
-max_parallel_workers_per_gather = 1
-max_parallel_workers = 2
-max_parallel_maintenance_workers = 1
+huge_pages = off
+listen_addresses = '0.0.0.0'
+maintenance_work_mem = 96000kB
+max_connections = 100
+max_wal_size = 4GB
+min_wal_size = 1GB
+random_page_cost = 1.1
+shared_buffers = 375MB
+wal_buffers = 11520kB
+work_mem = 960kB
